The following files have been added

--- a/dsan-website/5000-website/info/code.html
+++ b/dsan-website/5000-website/info/code.html
@@ -1,12 +1,11 @@
-
 <!DOCTYPE html>
 <html>
     
 <head>
-    <title> Title  </title>
+    <title> About me  </title>
 
     <!-- point to css stylesheet -->
-    <link rel="stylesheet" href="../styles.css"> 
+    <link rel="stylesheet" href="../../styles.css"> 
 
 </head>
 
@@ -73,11 +72,10 @@
     
     </ul>
 
-
     <title>My Repository Link</title>
 </head>
 <body>
     <p>This is the link to my repo:</p>
-    <a href="https://github.com/your-username/your-repo" target="_blank">My GitHub Repository</a>
+    <a href="https://github.com/anly501/dsan-5000-project-msheeba4848/tree/main/codes" target="_blank">My GitHub Repository</a>
 </body>
 </html>
