the following files have been added

--- a/dsan-website/5000-website/info/introduction.html
+++ b/dsan-website/5000-website/info/introduction.html
@@ -79,25 +79,25 @@
     <p> As an economics student, understanding the impact of privatisation on macroeconomic variables is of interest to me due to the Privitisation of LIC and the Visakapatnam Steel Plant. This led me to explore and think about whether privitisation is indeed tool for increase in efficency and greater returns or is it a detour against the public interest, especially against the SOE (Socially Owned Enterprises) </p>
 
     <p> Privatisation, or the transfer of state-owned assets and services to the private sector, has been a popular policy instrument in many economies around the world. Its impact on macroeconomic variables is of great interest and discussion. Privatisation has the potential to have far-reaching implications on fiscal balances, economic growth, inflation, employment, income distribution, and the general economic landscape. The impacts vary greatly depending on the individual industry or sector privatised, how privatisation is carried out, and the overall economic climate. This sets the scenario for my investigation into how privatisation alters macroeconomic variables and the complications that surround its results. <br> 
-    <p> The work of  <cite><a href="https://www.imf.org/external/pubs/ft/wp/2000/wp00130.pdf">Barnett (2000)</a></cite> is a first example in this context. The author examines the association between privatisation programmes and macroeconomic performance using a panel of 18 nations. The most important finding is that increasing privatisation is linked to higher real GDP growth. Barnett incorporates both contemporaneous and lagged proceeds from privatisation in the regressions, and the only control variable used is lagged GDP growth. 
-        Similarly, according to Djankov and Murrell's article, ownership changes influence firm reorganisation. Privatisation and private ownership have a good impact on restructuring, resulting in enhanced efficiency and productivity. The authors, on the other hand, highlight that net direct revenues from privatisation have been rather limited, owing to high outstanding credit sales, high costs of divestment, and high outstanding liabilities of privatised enterprises. It also appears that the strategy placed far too much focus on public finance rationalisation and faith in the market system, while placing far too little emphasis on sociopolitical and regulatory issues. Furthermore, it has been noted that privatisation might have a detrimental impact on corruption. </p> 
+    <p> The work of  <cite><a href="https://www.imf.org/external/pubs/ft/wp/2000/wp00130.pdf">(Barnett, 2000)</a></cite> is a first example in this context. The author examines the association between privatisation programmes and macroeconomic performance using a panel of 18 nations. The most important finding is that increasing privatisation is linked to higher real GDP growth. Barnett incorporates both contemporaneous and lagged proceeds from privatisation in the regressions, and the only control variable used is lagged GDP growth. 
+        Similarly, according to <cite><a href="https://pdf.usaid.gov/pdf_docs/Pnacy096.pdf">(Djankov and Murrell, 2000)</a></cite>'s article, ownership changes influence firm reorganisation. Privatisation and private ownership have a good impact on restructuring, resulting in enhanced efficiency and productivity. The <cite><a href="https://www.cambridge.org/core/journals/journal-of-modern-african-studies/article/abs/stateowned-enterprises-and-privatisation-in-ghana/4B161D68DCC7269A969BCBB265819A8A">(Appiah-Kubi, 2001)</a></cite>, on the other hand, highlight that net direct revenues from privatisation have been rather limited, owing to high outstanding credit sales, high costs of divestment, and high outstanding liabilities of privatised enterprises. It also appears that the strategy placed far too much focus on public finance rationalisation and faith in the market system, while placing far too little emphasis on sociopolitical and regulatory issues. Furthermore, it has been noted that privatisation might have a detrimental impact on corruption. <cite><a href="https://www.jstor.org/stable/48715346">(Cuadrado-Ballesteros and Peña-Miguel, 2018)</a></cite>  </p> 
     </p>
     <h2> Questions</h2>
 
     <p> 
       
 
-      <p style="padding-top: 20px;">1.  What is the relationship between the extent of privatization and GDP growth rates?<br></p>
-      <p style="padding-top: 20px;">2. Does the privatization of certain industries impact the rate of inflation?<br></p>
-      <p style="padding-top: 20px;">3. Do changes in the level of privatization correlate with changes in consumer price indices?<br></p>
-      <p style="padding-top: 20px;">4. Are there associations between privatization efforts and fluctuations in unemployment rates?<br></p>
-      <p style="padding-top: 20px;">5. Does privatization exacerbate or mitigate income inequality within a country?<br></p>
-      <p style="padding-top: 20px;">6. Are there correlations between privatization efforts and levels of FDI inflows?<br></p>
-      <p style="padding-top: 20px;">7. Do different industries experience varying effects of privatization on macroeconomic variables?<br></p>
-      <p style="padding-top: 20px;">8. Is there a correlation between privatization and private sector investment in capital and infrastructure?<br></p>
-      <p style="padding-top: 20px;">9. Do privatized industries show differences in export performance compared to state-owned industries?<br></p>
-      <p style="padding-top: 20px;">10. Does privatization improve the ease of doing business and attractiveness for foreign investment?<br></p>
-      <p style="padding-top: 20px;">11. How does privatization affect market competition for both small and large firms?<br></p>
+      <p style="padding-top: 5px;">1.  What is the relationship between the extent of privatization and GDP growth rates?<br></p>
+      <p style="padding-top: 5px;">2. Does the privatization of certain industries impact the rate of inflation?<br></p>
+      <p style="padding-top: 5px;">3. Do changes in the level of privatization correlate with changes in consumer price indices?<br></p>
+      <p style="padding-top: 5px;">4. Are there associations between privatization efforts and fluctuations in unemployment rates?<br></p>
+      <p style="padding-top: 5px;">5. Does privatization exacerbate or mitigate income inequality within a country?<br></p>
+      <p style="padding-top: 5px;">6. Are there correlations between privatization efforts and levels of FDI inflows?<br></p>
+      <p style="padding-top: 5px;">7. Do different industries experience varying effects of privatization on macroeconomic variables?<br></p>
+      <p style="padding-top: 5px;">8. Is there a correlation between privatization and private sector investment in capital and infrastructure?<br></p>
+      <p style="padding-top: 5px;">9. Do privatized industries show differences in export performance compared to state-owned industries?<br></p>
+      <p style="padding-top: 5px;">10. Does privatization improve the ease of doing business and attractiveness for foreign investment?<br></p>
+      <p style="padding-top: 5px;">11. How does privatization affect market competition for both small and large firms?<br></p>
       
 
     </p>
@@ -121,10 +121,10 @@
       <h2>References</h2>
       <!-- <ul> -->
           <!-- Your list of references goes here -->
-          1. Barnett, Steven A. (2000). "Evidence on the fiscal and macroeconomic impact of privatization." IMF Working Paper No. 00/130.<br>
-          2. Djankov, Simeon, and Murrell, Peter. (2000). "The determinants of enterprise restructuring in transition: An assessment of the evidence." World Bank Publications.
-          3. Appiah-Kubi, Kojo. (2001). "State-owned enterprises and privatisation in Ghana." The Journal of Modern African Studies, 39(2), 197-229. Cambridge University Press.
-          4. Cuadrado-Ballesteros, Beatriz, and Peña-Miguel, Noemí. (2018). "The socioeconomic consequences of privatization: An empirical analysis for Europe." Social Indicators Research, 139, 163-183. Springer.
+        <p>1. Barnett, Steven A. (2000). "Evidence on the fiscal and macroeconomic impact of privatization." IMF Working Paper No. 00/130. </p> 
+        <p>2. Djankov, Simeon, and Murrell, Peter. (2000). "The determinants of enterprise restructuring in transition: An assessment of the evidence." World Bank Publications. </p>
+        <p>3. Appiah-Kubi, Kojo. (2001). "State-owned enterprises and privatisation in Ghana." The Journal of Modern African Studies, 39(2), 197-229. Cambridge University Press. </p>
+        <p>4. Cuadrado-Ballesteros, Beatriz, and Peña-Miguel, Noemí. (2018). "The socioeconomic consequences of privatization: An empirical analysis for Europe." Social Indicators Research, 139, 163-183. Springer.</p>
           <!-- Add more references as needed -->
       <!-- </ul> -->
   <!-- </div> -->
