the following files have been added

--- a/dsan-website/5000-website/info/code.html
+++ b/dsan-website/5000-website/info/code.html
@@ -77,5 +77,16 @@
 <body>
     <p>This is the link to my repo:</p>
     <a href="https://github.com/anly501/dsan-5000-project-msheeba4848/tree/main/codes" target="_blank">My GitHub Repository</a>
-</body>
+
+    <!-- footer -->
+ <footer>
+  <p>
+    Moghal Sheeba  |  Washington DC  | GU Net ID: sm3924 |
+
+    <a href="mailto:sm3924@georgetown.edu"> Mail</a>
+     |
+  </p>
+</footer>
+
+  </body>
 </html>
