--- a/dsan-website/index.html
+++ b/dsan-website/index.html
@@ -108,8 +108,8 @@
  <!-- footer -->
   <footer>
     <p>
-      Moghal Sheeba  |  Washington DC  | 
-
+      Moghal Sheeba  |  Washington DC  | GU Net ID: sm3924 |
+ 
       <a href="mailto:sm3924@georgetown.edu"> Mail</a>
        |
     </p>
