--- a/dsan-website/5000-website/info/introduction.html
+++ b/dsan-website/5000-website/info/introduction.html
@@ -129,5 +129,15 @@
       <!-- </ul> -->
   <!-- </div> -->
 
+   <!-- footer -->
+   <footer>
+    <p>
+      Moghal Sheeba  |  Washington DC  | GU Net ID: sm3924 |
+ 
+      <a href="mailto:sm3924@georgetown.edu"> Mail</a>
+       |
+    </p>
+  </footer>
+
 </body>
 </html>
