the files have been added

--- a/dsan-website/index.html
+++ b/dsan-website/index.html
@@ -17,7 +17,7 @@
   <!-- About me tab -->
     <li>
       
-      <a href="./index.html" style="font-family: 'garabond'" > Main 
+      <a href="../../index.html" style="font-family: 'garabond'" > Main 
 
       </a>
     
