--- a/dsan-website/5000-website/info/introduction.html
+++ b/dsan-website/5000-website/info/introduction.html
@@ -18,7 +18,7 @@
   <!-- About me tab -->
     <li>
       
-      <a href="./index.html" style="font-family: 'garabond'" > Main 
+      <a href="../../index.html" style="font-family: 'garabond'" > Main 
 
       </a>
     
