changes have been made

--- a/dsan-website/5000-website/info/data_gathering.html
+++ b/dsan-website/5000-website/info/data_gathering.html
@@ -221,7 +221,21 @@ The final data looks like this
 <br>
 <img src="../images/tablet.png" width="800" height="400" alt="Libraries Imported">
 <br>
-<br>
+<br/>
+
+
+   <!-- footer -->
+   <footer>
+    <p>
+      Moghal Sheeba  |  Washington DC  | GU Net ID: sm3924 |
+ 
+      <a href="mailto:sm3924@georgetown.edu"> Mail</a>
+       |
+    </p>
+  </footer>
+
+</body>
+</html>
 
 
 
