--- a/dsan-website/5000-website/info/data_gathering.html
+++ b/dsan-website/5000-website/info/data_gathering.html
@@ -76,15 +76,18 @@
     <!-----content -->
 
     <h1> Data Gathering </h1>
-    Since my problem statement focuses upon the impact of fiscal policy on macroeconomic variables, the data naturally consists of numerical or quantitative data based on time. For this topic, the most reliable websites for data collection were either to physically search for the data or through the usage of APIs (Application Programming Interface). 
+    Since my problem statement focuses upon the impact of fiscal policy on macroeconomic variables, the data naturally consists of numerical or quantitative data based on time along with textual data. For this topic, the most reliable websites for data collection were either to physically search for the data or through the usage of APIs (Application Programming Interface). 
     <h2> Data Source </h2>
     Since one of the questions mainly attempts to compare the impacts of fiscal policies between Bangladesh which is an underdeveloped economic and India which is a developing economy, India's data was retrieved from FRED API. The FRED® API is a web service that allows developers to create programmes and construct apps that retrieve statistical information about the economy from the FRED® and ALFRED® websites hosted by the Federal Reserve Bank of St. Louis' Economic Research Division using Python <cite><a href="https://fred.stlouisfed.org/docs/api/fred/">(FRED API, n.d)</a></cite>. <br>
     <br>
     On the other hand, the data for Bangladesh has been retrived from 'wbstats' API which is an R-based interface, that is used for searching and downloading data from World Bank <cite><a href="https://cran.r-project.org/web/packages/wbstats/vignettes/wbstats.html#:~:text=wbstats%3A%20An%20R%20package%20for,from%20the%20World%20Bank%20API.">(wbstats, n.d)</a></cite>.
+    <br>
+    <br>
+    For textual data, NEWS API has been used, which is one of the easiest ways to extract news content from all of the world's leading providers <cite><a href=" https://newsapi.org/docs">(NEWSAPI, n.d)</a></cite>.
     <h2> Data Description </h2>
 
-    The data has been collected from 2000-2023. 
-
+    The data has been collected from 2000-2023, using the cited documents from above.
+   
     <!--table-->
 
     <table>
@@ -177,6 +180,11 @@ The final output of the data is shown below.
 <br>
 <br>
 
+To access to code: Click <cite><a href="https://github.com/anly501/dsan-5000-project-msheeba4848/tree/main/dsan-website/5000-website/codes">here</a></cite>. <br>
+To access the raw data: Click <cite><a href="https://github.com/anly501/dsan-5000-project-msheeba4848/tree/main/dsan-website/5000-website/data">here</a></cite>.
+
+
+
 <h2> QUANTITATIVE DATA: wbstats API - R </h2>
 
 Using the FREDAPI, the data has been extracted. <br>
@@ -197,32 +205,43 @@ The final output of the data is shown below.
 <br>
 <br>
 
+To access to code: Click <cite><a href="https://github.com/anly501/dsan-5000-project-msheeba4848/tree/main/dsan-website/5000-website/codes">here</a></cite>. <br>
+To access the raw data: Click <cite><a href="https://github.com/anly501/dsan-5000-project-msheeba4848/tree/main/dsan-website/5000-website/data">here</a></cite>.
+
+
 <h2> TEXT DATA: NEWSAPI - Python </h2>
 
 Using the NEWSAPI, the textual data has been extracted. We see the import of libraries with the relevent API key. <br>
 <br>
 
-<img src="../images/libt.png" width="600" height="100" alt="Libraries Imported">
+<img src="../images/textlib.png" width="600" height="100" alt="Libraries Imported">
 <br>
 <br>
-After the textual data has been extracted, it is shown in json format as shown below.<br>
+After the textual data has been extracted, the topics of 'Macroeconomic' and 'Fiscal Policy' have been chosen. The code is shown below.<br>
 <br>
-<img src="../images/dict.png" width="600" height="300" alt="Libraries Imported">
-<br>
-<br>
-After pre-processing, the data looks like this in dictionary format.
+<img src="../images/codet.png" width="600" height="300" alt="Libraries Imported">
 <br>
 <br>
-<img src="../images/headt.png" width="600" height="200" alt="Libraries Imported">
+Before pre-processing, the data looks like this in json format.
+<br>
+<br>
+<img src="../images/jsonfisraw.png" width="600" height="200" alt="Libraries Imported">
+<br>
+<br>
+<img src="../images/macrofisraw.png" width="600" height="200" alt="Libraries Imported">
 <br>
 <br>
 The final data looks like this
 <br>
 <br>
-<img src="../images/tablet.png" width="800" height="400" alt="Libraries Imported">
+<img src="../images/fisheadraw.png" width="600" height="200" alt="Libraries Imported">
+<br>
+<br>
+<img src="../images/macroheadraw.png" width="600" height="200" alt="Libraries Imported">
 <br>
 <br/>
-
+To access to code: Click <cite><a href="https://github.com/anly501/dsan-5000-project-msheeba4848/tree/main/dsan-website/5000-website/codes">here</a></cite>. <br>
+To access the raw data: Click <cite><a href="https://github.com/anly501/dsan-5000-project-msheeba4848/tree/main/dsan-website/5000-website/data">here</a></cite>.
 
    <!-- footer -->
    <footer>
