--- a/dsan-website/5000-website/info/data_cleaning.html
+++ b/dsan-website/5000-website/info/data_cleaning.html
@@ -76,11 +76,110 @@
 <!-----content -->
 
 <h1> Data Cleaning </h1>
-Since my problem statement focuses upon the impact of fiscal policy on macroeconomic variables, the data naturally consists of numerical or quantitative data based on time. For this topic, the most reliable websites for data collection were either to physically search for the data or through the usage of APIs (Application Programming Interface). 
-<h2> Data Source </h2>
-Since one of the questions mainly attempts to compare the impacts of fiscal policies between Bangladesh which is an underdeveloped economic and India which is a developing economy, India's data was retrieved from FRED API. The FRED® API is a web service that allows developers to create programmes and construct apps that retrieve statistical information about the economy from the FRED® and ALFRED® websites hosted by the Federal Reserve Bank of St. Louis' Economic Research Division using Python <cite><a href="https://fred.stlouisfed.org/docs/api/fred/">(FRED API, n.d)</a></cite>. <br>
-<br>
-On the other hand, the data for Bangladesh has been retrived from 'wbstats' API which is an R-based interface, that is used for searching and downloading data from World Bank <cite><a href="https://cran.r-project.org/web/packages/wbstats/vignettes/wbstats.html#:~:text=wbstats%3A%20An%20R%20package%20for,from%20the%20World%20Bank%20API.">(wbstats, n.d)</a></cite>.
-<h2> Data Description </h2>
+The cleaning of both textual and quantitative as no simple solution as each dataset has to be treated separately. Hence, the data will be tackled separately.
 
-The data has been collected from 2000-2023. 
+<h2> QUANTITATIVE DATA: FRED API - Python </h2>
+
+Using the FREDAPI, the data has been extracted. The data that has been extracted from FredAPI had certain missing values in them that was imputed by mean value imputation. I would eventually like to explore Bayensian Missing Value Imputation but as a first step of cleaning, I have used mean. Except missing value handing, not much was done except merging the dataset. The data pre-processing took quite some time wherein, different data points had to be merged through outer-join into a singular dataframe for 'India'. <br>
+<br>
+This is how the merging had been done.
+
+<img src="../images/headfred.png" width="400" height="100" alt="Libraries Imported">
+<br>
+<br>
+The data is then merged to create a comparible dataset
+<br>
+<img src="../images/mergefred.png" width="800" height="300" alt="Libraries Imported">
+<br>
+<br>
+The data is then seen for information and missing values
+<br>
+<br>
+<img src="../images/missingfred.png" width="800" height="300" alt="Libraries Imported">
+<br>
+<br>
+And then for data summary 
+<img src="../images/fredinfo.png" width="800" height="300" alt="Libraries Imported">
+<br>
+
+To access to code: Click <cite><a href="https://github.com/anly501/dsan-5000-project-msheeba4848/tree/main/dsan-website/5000-website/codes">here</a></cite>. <br>
+To access the raw data: Click <cite><a href="https://github.com/anly501/dsan-5000-project-msheeba4848/tree/main/dsan-website/5000-website/data">here</a></cite>.
+
+
+
+<h2> QUANTITATIVE DATA: wbstats API - R </h2>
+
+Using the FREDAPI, the data has been extracted. <br>
+<br>
+
+<img src="../images/libr.png" width="400" height="100" alt="Libraries Imported">
+<br>
+<br>
+Next the data has been obtained using the following series id. These have been obtained by looking at the wbstats API under 'India' category.<br>
+<br>
+<img src="../images/seriesr.png" width="800" height="300" alt="Libraries Imported">
+<br>
+<br>
+The final output of the data is shown below.
+<br>
+<br>
+<img src="../images/datar.png" width="800" height="300" alt="Libraries Imported">
+<br>
+<br>
+
+To access to code: Click <cite><a href="https://github.com/anly501/dsan-5000-project-msheeba4848/tree/main/dsan-website/5000-website/codes">here</a></cite>. <br>
+To access the raw data: Click <cite><a href="https://github.com/anly501/dsan-5000-project-msheeba4848/tree/main/dsan-website/5000-website/data">here</a></cite>.
+
+
+<h2> TEXT DATA: NEWSAPI - Python </h2>
+
+Using the NEWSAPI, the textual data has been extracted. We see the import of libraries with the relevent API key. <br>
+<br>
+
+<img src="../images/textlib.png" width="600" height="100" alt="Libraries Imported">
+<br>
+<br>
+After the textual data has been extracted, the topics of 'Macroeconomic' and 'Fiscal Policy' have been chosen. The code is shown below.<br>
+<br>
+<img src="../images/codet.png" width="600" height="300" alt="Libraries Imported">
+<br>
+<br>
+Before pre-processing, the data looks like this in json format.
+<br>
+<br>
+<img src="../images/jsonfisraw.png" width="600" height="200" alt="Libraries Imported">
+<br>
+<br>
+<img src="../images/macrofisraw.png" width="600" height="200" alt="Libraries Imported">
+<br>
+<br>
+The final data looks like this
+<br>
+<br>
+<img src="../images/fisheadraw.png" width="600" height="200" alt="Libraries Imported">
+<br>
+<br>
+<img src="../images/macroheadraw.png" width="600" height="200" alt="Libraries Imported">
+<br>
+<br/>
+To access to code: Click <cite><a href="https://github.com/anly501/dsan-5000-project-msheeba4848/tree/main/dsan-website/5000-website/codes">here</a></cite>. <br>
+To access the raw data: Click <cite><a href="https://github.com/anly501/dsan-5000-project-msheeba4848/tree/main/dsan-website/5000-website/data">here</a></cite>.
+
+   <!-- footer -->
+   <footer>
+    <p>
+      Moghal Sheeba  |  Washington DC  | GU Net ID: sm3924 |
+ 
+      <a href="mailto:sm3924@georgetown.edu"> Mail</a>
+       |
+    </p>
+  </footer>
+
+</body>
+</html>
+
+
+
+
+
+ 
