--- a/dsan-website/5000-website/info/data_gathering.html
+++ b/dsan-website/5000-website/info/data_gathering.html
@@ -164,21 +164,26 @@
 
 Using the FREDAPI, the data has been extracted. <br>
 <br>
-
+<div style="text-align: center;"> 
 <img src="../images/importpy.png" width="400" height="100" alt="Libraries Imported">
 <br>
 <br>
+</div>
 Next the data has been obtained using the following series id. These have been obtained by looking at the FRED website under 'India' category.<br>
 <br>
+<div style="text-align: center;"> 
 <img src="../images/seriespy.png" width="800" height="300" alt="Libraries Imported">
 <br>
 <br>
+</div>
 The final output of the data is shown below.
 <br>
 <br>
+<div style="text-align: center;"> 
 <img src="../images/datapy.png" width="800" height="300" alt="Libraries Imported">
 <br>
 <br>
+</div>
 
 To access to code: Click <cite><a href="https://github.com/anly501/dsan-5000-project-msheeba4848/tree/main/dsan-website/5000-website/codes">here</a></cite>. <br>
 To access the raw data: Click <cite><a href="https://github.com/anly501/dsan-5000-project-msheeba4848/tree/main/dsan-website/5000-website/data">here</a></cite>.
@@ -189,21 +194,26 @@ To access the raw data: Click <cite><a href="https://github.com/anly501/dsan-500
 
 Using the FREDAPI, the data has been extracted. <br>
 <br>
-
+<div style="text-align: center;"> 
 <img src="../images/libr.png" width="400" height="100" alt="Libraries Imported">
 <br>
 <br>
+</div>
 Next the data has been obtained using the following series id. These have been obtained by looking at the wbstats API under 'India' category.<br>
 <br>
+<div style="text-align: center;"> 
 <img src="../images/seriesr.png" width="800" height="300" alt="Libraries Imported">
 <br>
 <br>
+</div>
 The final output of the data is shown below.
 <br>
 <br>
+<div style="text-align: center;"> 
 <img src="../images/datar.png" width="800" height="300" alt="Libraries Imported">
 <br>
 <br>
+</div>
 
 To access to code: Click <cite><a href="https://github.com/anly501/dsan-5000-project-msheeba4848/tree/main/dsan-website/5000-website/codes">here</a></cite>. <br>
 To access the raw data: Click <cite><a href="https://github.com/anly501/dsan-5000-project-msheeba4848/tree/main/dsan-website/5000-website/data">here</a></cite>.
@@ -213,33 +223,44 @@ To access the raw data: Click <cite><a href="https://github.com/anly501/dsan-500
 
 Using the NEWSAPI, the textual data has been extracted. We see the import of libraries with the relevent API key. <br>
 <br>
-
+<div style="text-align: center;"> 
 <img src="../images/textlib.png" width="600" height="100" alt="Libraries Imported">
 <br>
 <br>
+</div>
 After the textual data has been extracted, the topics of 'Macroeconomic' and 'Fiscal Policy' have been chosen. The code is shown below.<br>
 <br>
+<div style="text-align: center;"> 
 <img src="../images/codet.png" width="600" height="300" alt="Libraries Imported">
 <br>
 <br>
+</div>
 Before pre-processing, the data looks like this in json format.
 <br>
 <br>
+<div style="text-align: center;"> 
 <img src="../images/jsonfisraw.png" width="600" height="200" alt="Libraries Imported">
 <br>
 <br>
+</div>
+<div style="text-align: center;"> 
 <img src="../images/macrofisraw.png" width="600" height="200" alt="Libraries Imported">
 <br>
 <br>
+</div>
 The final data looks like this
 <br>
 <br>
+<div style="text-align: center;"> 
 <img src="../images/fisheadraw.png" width="600" height="200" alt="Libraries Imported">
 <br>
 <br>
+</div>
+<div style="text-align: center;"> 
 <img src="../images/macroheadraw.png" width="600" height="200" alt="Libraries Imported">
 <br>
 <br/>
+</div>
 To access to code: Click <cite><a href="https://github.com/anly501/dsan-5000-project-msheeba4848/tree/main/dsan-website/5000-website/codes">here</a></cite>. <br>
 To access the raw data: Click <cite><a href="https://github.com/anly501/dsan-5000-project-msheeba4848/tree/main/dsan-website/5000-website/data">here</a></cite>.
 
