changes have been made

--- a/dsan-website/5000-website/info/code.html
+++ b/dsan-website/5000-website/info/code.html
@@ -38,7 +38,7 @@
     <li><a href="/dsan-website/5000-website/info/data_cleaning.html" style="font-family: 'garabond'">Data Cleaning</a></li>
 
     <!-- data exploration tab  -->
-    <li><a href="5100-website/_site/index.html"style="font-family: 'garabond'" >Data Exploration</a></li>
+    <li><a href="/index.html"style="font-family: 'garabond'" >Data Exploration</a></li>
 
     <!-- clustering tab  -->
     <li><a href="/dsan-website/5000-website/info/clustering.html"style="font-family: 'garabond'">Clustering</a></li>
@@ -67,7 +67,7 @@
     <li><a href="/dsan-website/5000-website/info/arm.html" style="font-family: 'garabond'">ARM</a></li>
 
     <!-- conclusion tab  -->
-    <li><a href="5100-website/_site/index.html"style="font-family: 'garabond'" >Conclusion</a></li>
+    <li><a href="/index.html"style="font-family: 'garabond'" >Conclusion</a></li>
     
     
     </ul>
