--- a/dsan-website/5000-website/info/arm.html
+++ b/dsan-website/5000-website/info/arm.html
@@ -38,7 +38,7 @@
     <li><a href="/dsan-website/5000-website/info/data_cleaning.html">Data Cleaning</a></li>
 
     <!-- data exploration tab  -->
-    <li><a href="5100-website/_site/index.html">Data Exploration</a></li>
+    <li><a href="/index.html">Data Exploration</a></li>
 
     <!-- clustering tab  -->
     <li><a href="/dsan-website/5000-website/info/clustering.html">Clustering</a></li>
@@ -67,7 +67,7 @@
     <li><a href="./arm.html">ARM</a></li>
 
     <!-- conclusion tab  -->
-    <li><a href="5100-website/_site/index.html">Conclusion</a></li>
+    <li><a href="/index.html">Conclusion</a></li>
     
     
 </ul>
