--- a/dsan-website/5000-website/info/data_cleaning.html
+++ b/dsan-website/5000-website/info/data_cleaning.html
@@ -24,51 +24,51 @@
     </li>
 
     <!-- code tab  -->
-    <li><a href="./5000-website/info/code.html" style="font-family: 'garabond'">Code</a></li>
+    <li><a href="code.html" style="font-family: 'garabond'">Code</a></li>
 
     <!-- data tab  -->
-    <li><a href="./5000-website/info/data.html" style="font-family: 'garabond'">Data</a></li>
+    <li><a href="data.html" style="font-family: 'garabond'">Data</a></li>
 
     <!-- introduction tab  -->
-    <li><a href="./5000-website/info/introduction.html" style="font-family: 'garabond'">Introduction</a></li>
+    <li><a href="introduction.html" style="font-family: 'garabond'">Introduction</a></li>
 
     <!-- data gathering tab  -->
-    <li><a href="./5000-website/info/data_gathering.html"style="font-family: 'garabond'">Data Gathering</a></li>
+    <li><a href="data_gathering.html"style="font-family: 'garabond'">Data Gathering</a></li>
 
     <!-- data cleaning tab  -->
-    <li><a href="./5000-website/info/data_cleaning.html" style="font-family: 'garabond'">Data Cleaning</a></li>
+    <li><a href="data_cleaning.html" style="font-family: 'garabond'">Data Cleaning</a></li>
 
     <!-- data exploration tab  -->
-    <li><a href="5100-website/_site/index.html"style="font-family: 'garabond'" >Data Exploration</a></li>
+    <li><a href="/index.html"style="font-family: 'garabond'" >Data Exploration</a></li>
 
     <!-- clustering tab  -->
-    <li><a href="./5000-website/info/clustering.html"style="font-family: 'garabond'">Clustering</a></li>
+    <li><a href="clustering.html"style="font-family: 'garabond'">Clustering</a></li>
 
     <!-- dimensionality reduction tab  -->
-    <li><a href="./5000-website/info/dimensionality_reduction.html" style="font-family: 'garabond'">Dimensionality Reduction</a></li>
+    <li><a href="dimensionality_reduction.html" style="font-family: 'garabond'">Dimensionality Reduction</a></li>
 
     <!-- decision trees tab with dropdown -->
   
     <li class="dropdown">
-      <a href="./5000-website/info/decision_trees.html" class="dropbtn" style="font-family: 'garabond'"> Decision Tree</a>
+      <a href="decision_trees.html" class="dropbtn" style="font-family: 'garabond'"> Decision Tree</a>
 
       <!-- drop down content -->
       <div class="dropdown-content">
 
       <!-- classificatio tab-->
-      <a href="./5000-website/info/classification.html" style="font-family: 'garabond'"> Classification </a>
+      <a href="classification.html" style="font-family: 'garabond'"> Classification </a>
 
       <!-- regression tab -->
-      <a href="./5000-website/info/regression.html" style="font-family: 'garabond'" > Regression </a>
+      <a href="regression.html" style="font-family: 'garabond'" > Regression </a>
   
       </div>
   </li>
 
     <!-- arm tab  -->
-    <li><a href="./5000-website/info/arm.html" style="font-family: 'garabond'">ARM</a></li>
+    <li><a href="arm.html" style="font-family: 'garabond'">ARM</a></li>
 
     <!-- conclusion tab  -->
-    <li><a href="./5000-website/info/conclusion.html"style="font-family: 'garabond'" >Conclusion</a></li>
+    <li><a href="conclusion.html"style="font-family: 'garabond'" >Conclusion</a></li>
     
     
     </ul>
