--- a/dsan-website/5000-website/info/EDA.html
+++ b/dsan-website/5000-website/info/EDA.html
@@ -152,11 +152,11 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
     </a>
     <ul class="dropdown-menu" aria-labelledby="nav-menu-data-exploration">    
         <li>
-    <a class="dropdown-item" href="../codes/EDA.html" rel="" target="">
+    <a class="dropdown-item" href="../info/data_exploration.html" rel="" target="">
  <span class="dropdown-text">Exploratory Data Analysis</span></a>
   </li>  
         <li>
-    <a class="dropdown-item" href="../codes/naivebayes.html" rel="" target="">
+    <a class="dropdown-item" href="../info/data_exploration.html" rel="" target="">
  <span class="dropdown-text">Naive Bayes</span></a>
   </li>  
     </ul>
