changes have been made

--- a/dsan-website/index.html
+++ b/dsan-website/index.html
@@ -45,7 +45,7 @@
     <li><a href="./5000-website/info/clustering.html"style="font-family: 'garabond'">Clustering</a></li>
 
     <!-- dimensionality reduction tab  -->
-    <li><a href="./5000-website/info/dimensionality_reduction.html" style="font-family: 'garabond'">Dimensionality Reduction</a></li>
+    <li><a href="5100-website/_site/index.html" style="font-family: 'garabond'">Dimensionality Reduction</a></li>
 
     <!-- decision trees tab with dropdown -->
   
